# Cor-PlusPlus

./: .gitignore  .gitmodules  .travis.yml  CMakeList.txt  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.ac  generateAutomake.sh
CMake/: FindZeroMQ.cmake
basic/: CMakeLists.txt  basic.cpp  basic.h  export.cpp  export.h  header_manager.cpp  particle_deduction.h
basic/corsika/: particle.h  steering_card.cpp
basic/include/: header_manager.h  particle_deduction.h
basic/include/basic/: header_manager.h  header_set.h  setup.h
basic/include/corsika/: event_end.h  particle.h  run_header.h  steering_card.h
basic/src/: basic.cpp  export.cpp
basic/src/corsika/: event_end.cpp  event_header.cpp  run_end.cpp  run_header.cpp  steering_card.cpp
cherenkov/: CMakeLists.txt
cherenkov/benchmark/: bench.cpp  bench_custom.cpp
cherenkov/config/: cherenk_config.h.in
cherenkov/include/: CERENK.F  CorsikaInterface.h  export.h
cherenkov/include/math/: expression_template.h  vec2.h  vec3.h  vec4.h
cherenkov/include/ocl/: OpenCL_Error.h  OpenCL_Hardware.h  OpenCL_Include.h  OpenCL_Kernel.h  OpenCL_Program.h  OpenCL_Queue.h  cl2.cpp
cherenkov/include/physic/: atmos.h  cherenk.h  constants.h  particle.h
cherenkov/kernel/: create_photon.cl  geometry.cl  random_test.cl
cherenkov/kernel/random/: MCW64X.cl  general.cl  mersenne_twister.cl  pcg.cl  xorshift.cl
cherenkov/src/: coast.cpp  export.cpp
cherenkov/src/ocl/: OpenCL_Error.cpp  OpenCL_Hardware.cpp  OpenCL_Kernel.cpp  OpenCL_Program.cpp  OpenCL_Queue.cpp
cherenkov/src/physic/: atmos.cpp
cherenkov/test/: opencl_random.cpp  opencl_test.cpp  unit_test.cpp
config/: .clang-format  .clang-tidy  config.h.in  corpp_config.h.in
corsika/: CMakeLists.txt
corsika/config/: corsika_config.h.in
corsika/test/: unit_test.cpp
docs/: Doxyfile.in
dynrng/: CMakeLists.txt
dynrng/include/dynrng/: export.h
dynrng/src/: export.cpp
dynrng/test/: corsika_rng.f  unit_test.cpp
dynrng/test/fortran_compare/: make.sh  plot.ipynb  plot.py
dynrng/test/mersenne/: seed.h
dynstack/: CMakeLists.txt  dynstack_config.h.in  export.cpp
dynstack/config/: dynstack_config.h.in
dynstack/include/: export.h
dynstack/include/dynstack/: dynstack_exception.h
dynstack/include/dynstack/stack/advanced/: advanced_sorted_stack.h  copy_stack.h  debug_stack.h  kill_stack.h
dynstack/include/dynstack/stack/storage/: fifo_stack.h  lifo_stack.h  lifo_std_stack.h  null_stack.h  ordered_stack.h
dynstack/include/dynstack/stack/wrapper/: filter_stack.h  in_callback_stack.h  in_modify_stack.h  out_callback_stack.h  out_modify_stack.h  overflow_to_disk_stack.h  priority_stack.h  sorted_stack.h  timer_stack.h
dynstack/include/stack/advanced/: dynamic_sorted_stack.h
dynstack/include/stack/storage/: fifo_stack.h
dynstack/include/stack/wrapper/: out_callback_stack.h  sorted_stack.h
dynstack/src/: export.cpp
dynstack/stack/: stack.h  stack_ptr.h
dynstack/stack/advanced/: copy_stack.h  dynamic_sorted_stack.h  if_stack.h
dynstack/stack/storage/: fifo_stack.h  lifo_stack.h  lifo_std_stack.h  null_stack.h
dynstack/stack/wrapper/: filter_stack.h  out_modify_stack.h  sorted_stack.h
dynstack/test/: advanced_test.h  storage_test.cpp  unit_test.cpp  wrapper_test.cpp
dynstack/test/advanced/: copy.h
dynstack/test/storage/: fifo.h  lifo.h  lifo_std.h
dynstack/test/wrapper/: combination.h  input_callback.h  output_callback.h
include/: Event.h  Simulation.h  import_functions.h  particle_deduction.h
include/test/basic/: particle_test.h
include/test/dynstack/: advanced_test.h  storage_test.h
include/test/remote_control/: message_queue_test.h  packet_test.h
include/user_code/: dynstack_setup.h  remotecontrol_setup.h
include/user_code/dynstack_examples/: default.h  icecube1.h  output.h
include/user_code/remotecontrol_examples/: default.h
lib/algorithm/: char_to_byte.h  fast_conversion.h
lib/data/: controlled_value.h
lib/data/corsika/: event_end.h  event_header.cpp  event_header.h  particle.h  run_end.h
lib/io/: file.cpp  file.h  io_exception.h
lib/meta/: compile_time_list.h  identity.h  index_sequence.h  is_callable.h  str_const.h  tuple_algorithm.h
patch/: Makefile.am  acinclude.m4  aclocal.m4  coconut  configure.ac  reconf.sh
patch/src/: Makefile.am  corsika.F
plugins/: CMakeLists.txt
plugins/steering/classic_steering/: CMakeLists.txt
plugins/steering/classic_steering/include/: classic_steering.h
plugins/steering/classic_steering/src/: classic_steering.cpp
remote_control/: CMakeLists.txt  export.cpp
remote_control/CMake/: FindZeroMQ.cmake
remote_control/communication/: message_queue.cpp  message_queue.h  packet.h
remote_control/config/: rc_config.h.in
remote_control/control/: main_control.cpp  main_control.h  periodic_task.cpp
remote_control/include/remote_control/: export.h
remote_control/include/remote_control/communication/: packet.h  packet_id.h
remote_control/include/remote_control/control/: main_control.h  periodic_task.h  recv_cache.h
remote_control/src/: export.cpp
remote_control/src/communication/: packet.cpp
remote_control/src/control/: main_control.cpp
remote_control/test/: Untitled.ipynb  export_test.h  helper.h  maincontrol_test.h  message_queue_test.cpp  message_queue_test.h  packet_test.h  periodic_task_test.h  rc_export_test.f77  unit_test.cpp  unittest_wrapper.cmake  zmq_c_test.h  zmq_cpp_test.h
src/: CorPP.cpp  Event.cpp  Simulation.cpp
src/corsika/: event_end.cpp
src/test/: export_test.f77
test/dynstack/: advanced_test.cpp  advanced_test.h  common_test_function.h  storage_test.cpp  unit_test.cpp  unit_test.h  wrapper_test.cpp  wrapper_test.h
test/export/: dyn_export_test.f77
test/lib/: unit_test.cpp  unit_test.h
test/remote_control/: message_queue_test.cpp  protocol_test.cpp  protocol_test.h  unit_test.h
user_code/: basic_setup.h  dynstack_setup.h  remotecontrol_setup.h
user_code/dynstack_examples/: default.h  iact_remove.h  output.h
user_code/remotecontrol_examples/: default.cpp
(+55 files in other folders)
